--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,68 @@
 /* .class-name #id-name */
 body {
     margin: 0;
+    font-family: 'Manrope', sans-serif;
 }
 
-#sketch-container{
-    margin-top: 3%;
-    z-index: -1; 
+#title{
+    color: honeydew;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: absolute;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+    font-size: 2.5vw;
+    top: 10vh;
+    left: 10vw;
+}
+
+#decision-container button{
+
+    display: flex;
+    flex-direction: column;  /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+    align-items: center;  
+    min-width: 20vw;
+    max-width: 50vw;
+    margin: auto;
+    margin-top: 1vh;
 }
 
 #decision-container{
-    top: 80%;
     position: absolute;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+    top: 50vh;
+    left: 70vw;
+    transform: translateX(-50%);
 }
 
 .decision-button{
-    /* add spacing between buttons */
-    /* margin-left: 10%;
-    margin-right: 10%; */
-    
+    width: auto;
+    text-align: center;
+    font-size: 1.2vw;
+    padding: 0.5vw;
+    border-radius: 8px;
+    background-color:rgb(255, 255, 255, 0.8);
+    border: none;
+}
+
+.decision-button:hover{
+    background-color: white;
 }
 
 #sceneText-container{
-    background:rgb(255, 255, 255, 0.3);
-    width: 50%;
-    color: white;
+    background:rgb(255, 255, 255, 0.6);;
+    min-width: 20vw;
+    color: black;
     position: absolute;
-    top: 45%;
-    transform: translate(50%, 100%);
+    bottom: 70vh;
+    left: 70vw;
+    border-radius: 10px; 
+    transform: translate(-50%, 50%)
 }
 
 #sceneText{
+    text-align: center;
     padding-left:5%;
     padding-right: 5%;
-    /* align-content: center; */
+    font-size: 1.2vw;
 
 }
