--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,8 @@ body {
 
 #sceneText-container{
     background:rgb(255, 255, 255, 0.6);;
-    min-width: 20vw;
+    width: auto;
+    max-height: 40vh;
     color: black;
     position: absolute;
     bottom: 70vh;
